docs/_theme/extra.css
/* Logo */
.md-header .md-icon.md-icon--home:before {
  content: "description";
}

/* Clipboard code copy */
.md-typeset .codehilite {
  position: relative;
  overflow: visible;
  padding: 0;
}
.md-typeset .codehilite[id]:before {
  display: inline;
}
.md-typeset .codehilite pre{
  overflow-x: auto;
  display: block;
  padding: 1rem 1.2rem .8rem;
}
.md-typeset pre.codehilite {
  overflow: visible;
}
.md-typeset pre.codehilite code {
  display: block;
  padding: 1rem 1.2rem 0.8rem;
  overflow: auto;
}
.md-typeset .clip-btn {
  overflow: visible;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
  display: inline-block;
  position: absolute;
  top: 0.2rem;
  right: 0.2rem;
  width: 3.2rem;
  height: 3.2rem;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  border-radius: 50%;
  background-color: #c4c4c4;
  color: white;
  cursor: pointer;
  opacity: 0;
}
.md-typeset .codehilite:hover .clip-btn {
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  opacity: 0.4;
}
.md-typeset .codehilite:hover .clip-btn:hover {
  -webkit-transition: opacity 0.1s;
  transition: opacity 0.1s;
  background-color: #2196f3;
  opacity: 1;
}
.md-typeset .clip-btn .md-icon--clipboard {
  position: relative;
  top: 0.1rem;
  font-size: 1.8rem;
}
.md-typeset .clip-btn .md-icon--clipboard:before {
  content: "assignment";
}
.md-typeset .clip-tip:after {
  position: absolute;
  top: 0.3rem;
  left: -0.5rem;
  padding: 0.6rem 1rem;
  -webkit-transform: translateX(-100%);
  transform: translateX(-100%);
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
  border-radius: 0.2rem;
  background: #404040;
  color: white;
  font-size: 1.28rem;
  font-weight: 700;
  white-space: nowrap;
  content: attr(aria-label);
  opacity: 1;
  visibility: hidden;
}
.md-typeset .clip-tip:hover:after {
  display: block;
  opacity: 0.9;
  visibility: visible;
}

/* Keys */
.md-typeset .keys kbd:before,
.md-typeset .keys kbd:after {
  color: #888;
  font-weight: normal;
  position: relative;
  font-family: sans-serif;
  -webkit-font-smoothing: initial;
  -moz-osx-font-smoothing: initial;
  margin: 0;
}
.md-typeset .keys span {
    color: #888;
    padding: 0 .2rem;
}
.md-typeset .keys .key-tab:after {
  content: '\21B9';
  padding-left: 0.2rem;
}
.md-typeset .keys .key-backspace:before {
  content: '\2190';
  padding-right: 0.2rem;
}
.md-typeset .keys .key-command:before {
  content: '\2318';
  padding-right: 0.2rem;
}
.md-typeset .keys .key-windows:before {
  content: '\229E';
  padding-right: 0.2rem;
}
.md-typeset .keys .key-caps-lock:before {
  content: '\21EA';
  padding-right: 0.2rem;
}
.md-typeset .keys .key-num-enter:after {
  content:  '\21B5';
  padding-left: 0.2rem;
}
.md-typeset .keys .key-enter:after {
  content:  '\21A9';
  padding-left: 0.2rem;
}
.md-typeset .keys .key-control:before {
  content:  '\2303';
  padding-right: 0.2rem;
}
.md-typeset .keys .key-meta:before {
  content:  '\25C6';
  padding-right: 0.2rem;
}
.md-typeset .keys .key-shift:before {
  content:  '\21E7';
  padding-right: 0.2rem;
}
.md-typeset .keys .key-option:before {
  content:  '\2325';
  padding-right: 0.2rem;
}

/* UML */
.md-typeset .uml-sequence-diagram,
.md-typeset .uml-flowchart {
  width: 100%;
  overflow: auto;
}

/* Code */
.md-typeset a>code {
  margin: 0 .29412em;
  padding: .07353em 0;
  background-color: rgba(237, 237, 237, .5);
  border-radius: .2rem;
  box-shadow: 0.29412em 0 0 rgba(237, 237, 237, .5), -0.29412em 0 0 rgba(237, 237, 237, .5);
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
}

.md-typeset td code {
  word-break: normal;
}

/* Header Anchors */
.md-typeset .headerlink {
  vertical-align: middle;
  font: normal normal 2rem "Material Icons";
}

.md-typeset h2 .headerlink {margin-top: -.4rem;}
.md-typeset h3 .headerlink {margin-top: -.3rem;}
.md-typeset h4 .headerlink,
.md-typeset h5 .headerlink,
.md-typeset h6 .headerlink {margin-top: -.2rem;}

@media only screen and (min-width: 76.1876em) {
  .md-typeset .headerlink {
    float: left;
    margin-left: -2.4rem;
  }
  .md-typeset h2 .headerlink {margin-top: .6rem;}
  .md-typeset h3 .headerlink {margin-top: .4rem;}
  .md-typeset h4 .headerlink {margin-top: .2rem;}
  .md-typeset h5 .headerlink,
  .md-typeset h6 .headerlink {margin-top: 0;}
}

/* Progress Bars */
.md-typeset .progress {
  display: block;
  width: 300px;
  margin: 10px 0;
  height: 24px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  background-color: #ededed;
  position: relative;
  box-shadow: inset -1px 1px 3px rgba(0, 0, 0, .1);
}

.md-typeset .progress-label {
  position: absolute;
  text-align: center;
  font-weight: bold;
  width: 100%; margin: 0;
  line-height: 24px !important;
  color: #333;
  text-shadow: 1px 1px 0 #fefefe, -1px -1px 0 #fefefe, -1px 1px 0 #fefefe, 1px -1px 0 #fefefe, 0 1px 0 #fefefe, 0 -1px 0 #fefefe, 1px 0 0 #fefefe, -1px 0 0 #fefefe, 1px 1px 2px #000;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  overflow: hidden;
}

.md-typeset .progress-bar {
  height: 24px;
  float: left;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  background-color: #96c6d7;
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .5), inset 0 -1px 0 rgba(0, 0, 0, .1);
  background-size: 30px 30px;
  background-image: -webkit-linear-gradient(
    135deg, rgba(255, 255, 255, .4) 27%,
    transparent 27%,
    transparent 52%, rgba(255, 255, 255, .4) 52%,
    rgba(255, 255, 255, .4) 77%,
    transparent 77%, transparent
  );
  background-image: -moz-linear-gradient(
    135deg,
    rgba(255, 255, 255, .4) 27%, transparent 27%,
    transparent 52%, rgba(255, 255, 255, .4) 52%,
    rgba(255, 255, 255, .4) 77%, transparent 77%,
    transparent
  );
  background-image: -ms-linear-gradient(
    135deg,
    rgba(255, 255, 255, .4) 27%, transparent 27%,
    transparent 52%, rgba(255, 255, 255, .4) 52%,
    rgba(255, 255, 255, .4) 77%, transparent 77%,
    transparent
  );
  background-image: -o-linear-gradient(
    135deg,
    rgba(255, 255, 255, .4) 27%, transparent 27%,
    transparent 52%, rgba(255, 255, 255, .4) 52%,
    rgba(255, 255, 255, .4) 77%, transparent 77%,
    transparent
  );
  background-image: linear-gradient(
    135deg,
    rgba(255, 255, 255, .4) 27%, transparent 27%,
    transparent 52%, rgba(255, 255, 255, .4) 52%,
    rgba(255, 255, 255, .4) 77%, transparent 77%,
    transparent
  );
}

.md-typeset .progress-100plus .progress-bar {
  background-color: #a6d796;
}

.md-typeset .progress-80plus .progress-bar {
  background-color: #c6d796;
}

.md-typeset .progress-60plus .progress-bar {
  background-color: #d7c896;
}

.md-typeset .progress-40plus .progress-bar {
  background-color: #d7a796;
}

.md-typeset .progress-20plus .progress-bar {
  background-color: #d796a6;
}

.md-typeset .progress-0plus .progress-bar {
  background-color: #c25f77;
}

.md-typeset .candystripe-animate .progress-bar{
  -webkit-animation: animate-stripes 3s linear infinite;
  -moz-animation: animate-stripes 3s linear infinite;
  animation: animate-stripes 3s linear infinite;
}

@-webkit-keyframes animate-stripes {
  0% {
    background-position: 0 0;
  }

  100% {
    background-position: 60px 0;
  }
}

@-moz-keyframes animate-stripes {
  0% {
    background-position: 0 0;
  }

  100% {
    background-position: 60px 0;
  }
}

@keyframes animate-stripes {
  0% {
    background-position: 0 0;
  }

  100% {
    background-position: 60px 0;
  }
}

.md-typeset .gloss .progress-bar {
  box-shadow:
    inset 0 4px 12px rgba(255, 255, 255, .7),
    inset 0 -12px 0 rgba(0, 0, 0, .05);
}

@media print {
  .md-typeset .progress,
  .md-typeset .progress-bar {
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
  }

  .md-typeset .progress {
    border: 1px solid #ddd;
  }

  .md-typeset .progress-bar {
    height: 22px;
    border-right: 1px solid #ddd;
  }
}

